apps/production/excalidraw/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: excalidraw-http
  namespace: excalidraw-prod
spec:
  hostnames:
    - excalidraw.burntbytes.com
  parentRefs:
    - name: app-gateway-production
      namespace: default
      sectionName: http-internal
  rules:
    - backendRefs:
      - name: excalidraw
        port: 80
