apps/production/excalidraw/room-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: excalidraw-room-http
  namespace: excalidraw-prod
spec:
  hostnames:
    - excalidraw-room.burntbytes.com
  parentRefs:
    - name: app-gateway-production
      namespace: default
      sectionName: http-internal
  rules:
    - backendRefs:
      - name: excalidraw-room
        port: 80
